test/fail/stdop-arg-t.rnp
1.range('hello', 1);
---
TypeError: Expected number but got string
fail/stdop-arg-t.rnp:1:9
1.range('hello', 1);
        ^^^^^^^
